# GC-Proyecto2-Raycasting

./: CMakeLists.txt  README.md  imageloader.h  main.cpp  raycaster.h
include/: constants.h  isDefined.h  print.h
